fix overflow issue of section-3

--- a/styles.css
+++ b/styles.css
@@ -317,6 +317,13 @@ h1 {
   }
 }
 
+@media (min-width: 1250px) {
+  .section-2 {
+    padding-left: 140px;
+    padding-right: 140px;
+  }
+}
+
 /* section-3 styles */
 .section-3 {
   height: 100%;
@@ -345,7 +352,7 @@ h1 {
 }
 
 .section-3 .animation-bgimage {
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
@@ -419,28 +426,31 @@ h1 {
 @media (min-width: 960px) {
   .section-3 {
     flex-direction: row;
-    height: 465px;
+    height: 490px;
+    padding: 54px 42px;
   }
 
   .section-3 .animation-container-box {
-    align-self: baseline;
+    padding-top: 82px;
+  }
+
+  .section-3 .animation-container {
+    max-width: 90%;
   }
   .section-3 .text-container {
     order: 2;
     font-size: 14px;
     text-align: left;
   }
+
+  .section-3 .text-container h1 {
+    padding-bottom: 0.6em;
+  }
 }
 
-.section-4 {
-  height: 100%;
-  min-height: auto;
-  background-color: black;
-  color: white;
-  padding: 50px 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  align-items: center;
+@media (min-width: 1250px) {
+  .section-3 {
+    padding-left: 140px;
+    padding-right: 140px;
+  }
 }
